--- a/Butuleac5.css
+++ b/Butuleac5.css
@@ -20,7 +20,7 @@ margin-bottom: 10px;
 }
 .content{
 
-background: #9af7ff;
+background: #FF9999;
 
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida;
 
